Fix bug newsfeed and trip/create. Create trip/browse (public trip)
